<resources>
    <string name="app_name">HabitTracker</string>
    <string name="title_home">Home</string>
    <string name="title_workout">Workout</string>
    <string name="title_water">Water</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="timer_default">00:00:00</string>
    <string name="timer_centiseconds_default">00</string>
    <string name="save_button">Save workout</string>
    <string name="water_default">0ml</string>
    <string name="water_format">%,dml</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_plus">Plus</string>
    <string name="button_minus">Minus</string>
    <string name="button_back">Backspace</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
</resources>